--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -16,8 +16,8 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>tests-common</module>
-        <module>tests-integration</module>
+        <!--module>tests-common</module-->
+        <!--module>tests-integration</module-->
         <!--<module>tests-ui-integration</module>-->
         <!--<module>tests-platform</module>-->
     </modules>
