--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -44,7 +44,7 @@
         <module>product</module>
     </modules>
 
-    <build>
+   <!-- <build>
         <plugins>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -60,5 +60,5 @@
             </plugin>
 
         </plugins>
-    </build>
+    </build>-->
 </project>
