--- a/modules/p2-profile/pom.xml
+++ b/modules/p2-profile/pom.xml
@@ -46,7 +46,7 @@
         <module>product</module>
     </modules>
 
-    <build>
+  <!--  <build>
         <plugins>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -61,5 +61,5 @@
                 </executions>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 </project>
