--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <groupId>org.wso2.am</groupId>
     <artifactId>am-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
     <name>WSO2 API Manager - Aggregator Module</name>
     <url>http://wso2.com/products/api-manager</url>
     <description>WSO2 API Manager</description>
@@ -59,7 +59,7 @@
         <url>https://github.com/chamilaadhi/product-apim.git</url>
         <developerConnection>scm:git:https://github.com/chamilaadhi/product-apim.git</developerConnection>
         <connection>scm:git:https://github.com/chamilaadhi/product-apim.git</connection>
-        <tag>HEAD</tag>
+        <tag>2.1.0</tag>
     </scm>
 
     <repositories>
